Got the code working to prompt user to findout what they want to purchase and compare that against the database 'stock' to check if enough, and if enough stock it will update the stock level and calculate the customer's total.

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/aaron-G18/Marketplace_DB#readme",
   "dependencies": {
     "inquirer": "^7.1.0",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "node": "^13.12.0"
   }
 }
