--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/aaron-G18/Marketplace_DB#readme",
   "dependencies": {
+    "chalk": "^4.0.0",
     "inquirer": "^7.1.0",
     "mysql": "^2.18.1",
     "node": "^13.12.0"
